<resources>
    <string name="app_name">SWShopWatcher</string>
    <string name="company_name">nekonesoft</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_menu_title">Menu</string>

    <string name="label_first_time">[First Time]</string>
    <string name="label_interval_time">[Interval Time]</string>
    <string name="button_set">Set</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_start_sw">Start and goto SW</string>
    <string name="button_goto_sw">Goto SW</string>

    <string name="notif_ticker">Summoners war : shop has been updated !</string>
    <string name="notif_title">SWShopWatcher</string>
    <string name="notif_text">Summoners war : shop has been updated !</string>

    <string name="toast_notif_nextalarm">Set Next Alarm !</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_finish">Finish</string>
    <string name="menu_finish_confirm">Are you sure you want to quit ?</string>
    <string name="menu_finish_yes">Yes</string>

    <string name="settings_category_alarm">Alarm Settings</string>
    <string name="settings_title_vibration">Vibration</string>

</resources>
