<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sw.nekonesoft.swshopwatcher.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="60:00"
            android:layout_margin="20dp"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/timer">

            <requestFocus />
        </TextView>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_first_time"
                android:id="@+id/first" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/first_minutes"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/first_seconds"
                android:gravity="center" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_set_button"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_interval_time"
                android:id="@+id/interval" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/interval_minutes"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/interval_seconds"
                android:gravity="center" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_button"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_button"
                android:layout_weight="1" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_button"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_start_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_sw_button"
                android:layout_weight="1" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:text="@string/button_goto_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goto_sw_button"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
